# Mercury

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/animations/: fox_run.ozz
assets/materials/: red_plastic.json
assets/models/: fox.json
assets/scripts/: test.lua
assets/shaders/: plastic.filamat
assets/skeletons/: fox_skeleton.ozz
patches/: assimp.patch  filament.patch  ozz-animation.patch  soloud.patch
src/: animator.cpp  animator.h  asset_library.cpp  asset_library.h  graphics.cpp  graphics.h  main.cpp  material.h  mesh.cpp  mesh.h  model.h  physics.cpp  physics.h  primitives.h  scripting.cpp  scripting.h  transform.cpp  transform.h
